@@ -12,4 +12,5 @@
 @import "resizable-menu";
 @import "icons";
 @import "reboot";
+@import "forms";
 @import "breadcrumb";
