@@ -5,7 +5,7 @@ $textarea-rows: 15 !default;
 
 .CodeMirror {
   font-family: $font-family-monospace !important;
-  height: ceil($textarea-rows * 1.2em);
+  height: 20rem;
   border: 1px solid #ccc;
   direction: ltr;
 }
