@@ -1,0 +1,5 @@
+select#fieldsSelect,
+textarea#sqlquery {
+  margin: 0;
+  height: 20rem;
+}
