@@ -13,6 +13,7 @@
 @import "resizable-menu";
 @import "icons";
 @import "reboot";
+@import "forms";
 @import "nav";
 @import "navbar";
 @import "card";
