@@ -1,0 +1,4 @@
+select#fieldsSelect,
+textarea#sqlquery {
+  height: 20rem;
+}
