@@ -12,6 +12,7 @@
 @import "../../pmahomme/scss/resizable-menu";
 @import "icons";
 @import "reboot";
+@import "forms";
 @import "nav";
 @import "navbar";
 @import "card";
