@@ -12,6 +12,7 @@
 @import "resizable-menu";
 @import "icons";
 @import "reboot";
+@import "forms";
 @import "buttons";
 @import "nav";
 @import "navbar";
